--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Cruelty -- Fiction'
 - !lcsh 'Animal welfare -- Fiction'
 - !lcsh 'Human-animal relationships -- Fiction'
+- GITenberg
 title: 'Loveliness: A Story'
 url: http://www.gutenberg.org/ebooks/35966
